--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[features]
-gui = ["dep:egui", "dep:eframe"]
+
 
 [dependencies]
 aes = "0.8.3"
@@ -17,8 +16,8 @@ rust-ini = "0.20.0"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
-egui = { version = "0.24.0", optional = true }
-eframe = { version = "0.24.0", optional = true }
+egui = { version = "0.24.0" }
+eframe = { version = "0.24.0"}
 egui_extras = { version = "0.24.0", features = ["all_loaders"] }
 egui-toast = "0.10.0"
 
