--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "rust-analyzer.linkedProjects": [
         ".\\Cargo.toml"
     ],
-    "rust-analyzer.cargo.features": ["gui"]
+    "rust-analyzer.cargo.features": []
 }
