--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alt-manager"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -27,5 +27,6 @@ features = [
     "Win32_System_Diagnostics_ToolHelp",
     "Win32_Foundation",
     "Win32_System_Threading",
-    "Win32_UI_WindowsAndMessaging"
+    "Win32_Security_Cryptography",
+    "Win32_Security",
 ]
