--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ egui = { version = "0.24.0" }
 eframe = { version = "0.24.0"}
 egui_extras = { version = "0.24.0", features = ["all_loaders"] }
 egui-toast = "0.10.0"
+rfd = "0.11"
 
 [dependencies.windows]
 version = "0.52"
